third_party/move/move-compiler-v2/tests/checking/typing/bind_unpack_references_invalid.exp

Diagnostics:
error: cannot assign `integer` to left-hand side of type `&u64`
  ┌─ tests/checking/typing/bind_unpack_references_invalid.move:7:9
  │
7 │         f = 0;
  │         ^

error: cannot assign `S` to left-hand side of type `&S`
  ┌─ tests/checking/typing/bind_unpack_references_invalid.move:8:9
  │
8 │         s2 = S { f: 0 }
  │         ^^

error: cannot assign `integer` to left-hand side of type `&mut u64`
   ┌─ tests/checking/typing/bind_unpack_references_invalid.move:13:9
   │
13 │         f = 0;
   │         ^

error: cannot assign `S` to left-hand side of type `&mut S`
   ┌─ tests/checking/typing/bind_unpack_references_invalid.move:14:9
   │
14 │         s2 = S { f: 0 }
   │         ^^

error: cannot assign `&u64` to left-hand side of type `&mut u64` (mutability mismatch)
   ┌─ tests/checking/typing/bind_unpack_references_invalid.move:20:9
   │
20 │         f = &0;
   │         ^

error: cannot assign `&S` to left-hand side of type `&mut S` (mutability mismatch)
   ┌─ tests/checking/typing/bind_unpack_references_invalid.move:21:9
   │
21 │         s2 = &S { f: 0 }
   │         ^^
